--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "ts-md5": "latest",
+    "jwt-decode": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
