--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
     "ts-md5": "latest",
-    "jwt-decode": "latest"
+    "jwt-decode": "latest",
+    "@angular/material": "^7.3.1",
+    "@angular/cdk": "~7.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
